Mejoras de prueba test